# ai-workspace

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTEXT.md  Makefile  README.md  cliff.toml  codecov.yml  contribution.md  docker-compose.yml  issues.md  mkdocs.yml  plan-104-remove-source-doc-id.md  pyproject.toml  sitecustomize.py  skills-lock.json
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: config.example.yaml
deploy/: sandbox-host.example.yaml
design_handoff_rca_3.0/: App Launcher (directions).html  App Launcher.html  RCA 3.0 prototype.html  README.md  design.md  index.html
design_handoff_rca_3.0/rca/: app.jsx  design-system-page.jsx  home.jsx  investigation.jsx  launcher.jsx  system.jsx
docker/: Dockerfile  Dockerfile.workspace  Dockerfile.workspace-deck
docker/profile.d/: sandbox-jailbin.sh
docs/: README.md  adding-an-app.md  architecture.md  configuration.md  contract.md  decisions.md  deployment.md  design-history.md  development.md  extending-the-platform.md  fe-blocking-gaps.md  fe-kickoff.md  glossary.md  handoff-launcher-design.md  handoff-wiki-fe-design.md  index.md  migrations.md  plan-app-templates.md  plan-backend.md  plan-cardgen-drafter-wiki-suppression.md  plan-code-qa.md  plan-collab-kb.md  plan-collab-workspace.md  plan-context-cards.md  plan-event-bus-cross-pod-streaming.md  plan-followups.md  plan-frontend.md  plan-http-sandbox.md  plan-issue-105.md  plan-issue-132-multichat-ux.md  plan-issue-177.md  plan-issue-178.md  plan-issue-219.md  plan-issue-226.md  plan-issue-227.md  plan-issue-230.md  plan-issue-231.md  plan-issue-245.md  plan-issue-247.md  plan-issue-254.md  (+74 more)
docs/subsystems/: agent-runtime.md  api-and-turns.md  apps-platform.md  boot-and-config.md  data-layer.md  frontend.md  index.md  jobs-and-scaling.md  kb-ingest-index.md  kb-retrieval-agent.md  platform-services.md  sandbox-and-filestore.md  tooling-and-sandbox-host.md  workflow-engine.md
kubernetes/: README.md
kubernetes/base/: configmap.yaml  cronjob-eval.yaml  cronjob-graph.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml  workers.yaml
rca-brand/splash/: README-splash.md  rca-splash-snippet.html  rca-splash.html
rca-brand/web/: head-snippet.html  site.webmanifest
sample-skills/author-skill/: SKILL.md
sample-skills/author-workflow/: SKILL.md
sample-skills/grill-me/: SKILL.md
sample-tools/csv-column-summary/: README.md  pyproject.toml  sample.csv
sample-tools/csv-column-summary/src/csv_column_summary/: __init__.py  cli.py  core.py
sample-tools/csv-column-summary/src/csv_column_summary/commands/: __init__.py  plot.py  summarise.py
sample-tools/csv-column-summary/tests/: test_cli.py
sample-tools/data-fetch/: README.md  pyproject.toml
sample-tools/data-fetch/src/data_fetch/: __init__.py  cli.py
sample-tools/data-fetch/tests/: test_cli.py
sample-tools/python-stack/: pyproject.toml
sample-tools/python-stack/src/python_stack/: __init__.py
sample-tools/sci-plot/: .gitignore  pyproject.toml
sample-tools/sci-plot/src/sci_plot/: __init__.py  cli.py
sample-tools/sci-plot/src/sci_plot/charts/: __init__.py  _wafer.py  box_scatter.py  defectmap.py  grouped_line.py  wafermap.py
sample-tools/sci-plot/src/sci_plot/commands/: __init__.py  chart.py
sample-tools/sci-plot/src/sci_plot/framework/: __init__.py  chart.py  normalize.py  output.py  registry.py  resolve.py  roles.py  style.py
sample-tools/sci-plot/tests/: test_box_scatter.py  test_chart.py  test_cli.py  test_defectmap.py  test_grouped_line.py  test_normalize.py  test_output.py  test_registry.py  test_resolve.py  test_style.py  test_wafermap.py
sample-workflows/image-to-knowledge/: workflow.json
sandbox-host/: Dockerfile  pyproject.toml
sandbox-host/src/sandbox_host/: __init__.py  __main__.py  app.py  config.py  isolated_process.py  local_process.py  mock.py  nfs_archive.py  protocol.py  service.py
sandbox-host/tests/: test_archive_wiring.py  test_config.py  test_contract.py  test_host_ops.py  test_isolated_process.py  test_isolated_process_integration.py  test_local_process.py  test_login_shell_path.py  test_mock.py  test_nfs_archive.py  test_nfs_archive_integration.py  test_nfs_rollout_integration.py  test_pip_shim.py  test_service.py  test_wire.py
scripts/: check_agent_relative_paths.py  check_app_resolve.py  check_author_skill_298.py  check_cardgen_closed_loop_506.py  check_cardgen_drafter_glossary_only_577.py  check_inchat_workflow_343.py  check_kb_reasoning.py  check_workflow_run.py  check_workflow_scaffold_287.py  check_workflow_steer.py  prebuild_tools.py  run_migrate.py  run_with_sample_tools.py
src/workspace_app/: __init__.py  __main__.py  context_budget.py  context_probe.py  context_reduce.py  context_reducers.py  coordinators.py  factories.py
tests/: test_context_budget.py  test_context_learn.py  test_context_overflow.py  test_context_probe.py  test_context_reduce.py  test_coordinators.py  test_cov_fill_factories.py  test_deferred_lookup.py  test_event_bus_factory.py  test_factories.py  test_ingress_upload_limit.py  test_litellm_local_cost_map.py  test_turn_control.py  test_worker.py
tests/agent/: conftest.py  test_arg_repair.py  test_args_recovery.py  test_ask_kb.py  test_ask_user.py  test_ask_wiki.py  test_collection_tools.py  test_config_catalog.py  test_conflict_echo_cap.py  test_cov_fill_agent.py  test_cov_fill_r2_ask_kb.py  test_deadline_model.py  test_decide_then_act.py  test_deck_loop.py  test_deck_render_integration.py  test_defect_lookup_tool.py  test_entity_tools.py  test_entity_tools_event_dispatch.py  test_format_exec.py  test_infer_modules.py  test_kb_search_budget.py  test_list_files.py  test_lookup_entity_tool.py  test_make_deck_tool.py  test_plot_review.py  test_provision.py  test_query_entity_paging.py  test_read_image_tool.py  test_read_skill_tool.py  test_reasoning.py  test_repairing_model.py  test_repetition.py  test_request_wiki_update_tool.py  test_save_skill_tool.py  test_save_workflow_tool.py  (+8 more)
web/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+1702 files in other folders)
