[project]
name = "workspace-app"
version = "2026.7.9"
description = "Workspace management app with pluggable sandbox + agent runtime"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "docker>=7.1.0",
    "docx2txt>=0.9",
    "ipykernel>=7.2.0",
    "json-repair>=0.60.1",
    "jupyter-client>=8.8.0",
    "litellm>=1.85.1",
    "llama-index-core>=0.10,<0.11",
    "llama-index-readers-file>=0.1.33",
    "openai-agents>=0.17.3",
    "openpyxl>=3.1.5",
    "pypdfium2>=5.9.0",
    "pyyaml>=6.0.3",
    "specstar[magic]>=0.11.15",
    "tenacity>=8.5.0",
    "tree-sitter<0.22",
    "tree-sitter-languages>=1.10.2",
]

[project.optional-dependencies]
process-sandbox = [
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "pandas<3",
    "pandera>=0.31.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workspace_app"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty",
    "coverage>=7",
    "asgi-lifespan>=2.1.0",
    "pytest-xdist>=3.8.0",
]
# Documentation site (mkdocs + Material). Build: `uv run --group docs mkdocs build`;
# serve locally: `uv run --group docs mkdocs serve`. Not needed by the app or the CI gate.
docs = [
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real docker / subprocess sandbox / jupyter kernel / uv / ollama; excluded from default CI via -m 'not integration'",
]

[tool.coverage.run]
branch = true
source = ["src/workspace_app"]
omit = [
    "src/workspace_app/__main__.py",
    "src/workspace_app/workflow/__main__.py",
    "src/workspace_app/worker/__main__.py",  # #312: settings-driven composition + CLI glue
    "src/workspace_app/changelog/__main__.py",  # #441: git-log walk + file IO glue
]
# parallel + sitecustomize's process_startup() let each pytest-xdist worker
# subprocess record its own .coverage.* file; `coverage combine` merges them.
# Harmless for serial runs (one data file, still combined).
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# sample-tools/* are standalone example projects (own pyproject + venv); they're
# linted/typed on their own, not as part of this package. sandbox-host/ is a
# fully independent project (own pyproject + uv.lock + CI job) — see #251.
extend-exclude = ["sample-tools", "sandbox-host"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ty.src]
exclude = ["src/workspace_app/rca/templates/*/**", "sample-tools/**", "sandbox-host/**"]
