[project]
name = "csv-column-summary"
version = "0.1.0"
description = "Summarise each column of a CSV — an example analysis tool provisioned into the RCA sandbox."
requires-python = ">=3.10"
# This tool brings its OWN dependencies (pandas + matplotlib for --plot). It
# lives in its own repo and is bundled into a self-contained package at prebuild
# time, so it never pollutes the host app's dependencies.
dependencies = ["pydantic>=2", "pandas>=2.0", "matplotlib>=3.8"]

[project.scripts]
csv-column-summary = "csv_column_summary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_column_summary"]

[dependency-groups]
dev = ["pytest>=8"]

# Self-contained rootdir so `pytest` doesn't walk up into the parent repo's config.
[tool.pytest.ini_options]
testpaths = ["tests"]

