[project]
name = "data-fetch"
version = "0.1.0"
description = "Download a URL into the workspace — an example analysis tool provisioned into the RCA sandbox."
requires-python = ">=3.10"
# Its OWN dependency (httpx). Installed INTO the sandbox at provision time, so
# the host app never gains an HTTP client it doesn't use.
dependencies = ["httpx>=0.27"]

[project.scripts]
data-fetch = "data_fetch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_fetch"]

[dependency-groups]
dev = ["pytest>=8"]

# Self-contained rootdir so `pytest` doesn't walk up into the parent repo's config.
[tool.pytest.ini_options]
testpaths = ["tests"]
