[project]
name = "data-fetch"
version = "0.1.0"
description = "Materialise a named (sklearn-augmented) dataset into the workspace — an example tool provisioned into the RCA sandbox."
requires-python = ">=3.10"
# Its OWN heavy analysis deps (scikit-learn / pandas / numpy). Installed INTO the
# sandbox at provision time, so the host app never inherits them. Generates
# offline from bundled sklearn datasets — no network, no LLM-supplied URL.
dependencies = ["scikit-learn>=1.3", "pandas>=2.0", "numpy>=1.24"]

[project.scripts]
data-fetch = "data_fetch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_fetch"]

[dependency-groups]
dev = ["pytest>=8"]

# Self-contained rootdir so `pytest` doesn't walk up into the parent repo's config.
[tool.pytest.ini_options]
testpaths = ["tests"]
